feat: add ability to auto-assign segment for users
