# docs/swagger.json
@@ -10,7 +10,7 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/api/segment/create/{slug}": {
+        "/api/segment/create": {
             "post": {
                 "description": "Create segment by slug",
                 "consumes": [
@@ -24,18 +24,20 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "Slug",
-                        "name": "slug",
-                        "in": "path",
-                        "required": true
+                        "name": "segmentDto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AddSegmentDto"
+                        }
                     }
                 ],
                 "responses": {
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Segment"
+                            "$ref": "#/definitions/dto.AddSegmentDto"
                         }
                     },
                     "400": {
@@ -330,7 +332,7 @@
                 }
             }
         },
-        "/api/user/get/csv/{id}": {
+        "/api/user/get/csv": {
             "get": {
                 "description": "Get user's segments in csv format by user id",
                 "consumes": [
@@ -344,16 +346,21 @@
                 ],
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "User id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "User segments range",
+                        "name": "userSegmentRange",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserSegmentsCsvDto"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -615,6 +622,17 @@
         }
     },
     "definitions": {
+        "dto.AddSegmentDto": {
+            "type": "object",
+            "properties": {
+                "percent": {
+                    "type": "integer"
+                },
+                "slug": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.SegmentDto": {
             "type": "object",
             "properties": {
@@ -637,6 +655,20 @@
                     "items": {
                         "$ref": "#/definitions/dto.SegmentDto"
                     }
+                },
+                "userId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UserSegmentsCsvDto": {
+            "type": "object",
+            "properties": {
+                "fromTime": {
+                    "type": "string"
+                },
+                "toTime": {
+                    "type": "string"
                 },
                 "userId": {
                     "type": "integer"
