# pkg/service/dto/add_segment_dto.go
@@ -1,0 +1,13 @@
+package dto
+
+type AddSegmentDto struct {
+	Slug    string `json:"slug"`
+	Percent *int   `json:"percent"`
+}
+
+func NewAddSegmentDto(slug string, percent *int) *AddSegmentDto {
+	return &AddSegmentDto{
+		Slug:    slug,
+		Percent: percent,
+	}
+}
